# game

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  cmakeconfig.h.in  config.h  config.h.in  config.status  configure  configure.ac  game  item.h  itemlist.h  items.json  items.xml  life  main.c  main.h  maze.c  maze.h  monster.h  player.h  travis-windows-setup.sh  xml  xml.c  xml.h
.deps/: game-main.Po  life-life.Po  xml-xml.Po
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2
cmake/: CheckVaArgs.cmake  FindPDCurses.cmake
cmake/FindPDCurses/: README.md
data/: Makefile.am  items.py  monster.h  player.h
life/: Makefile  Makefile.am  Makefile.in  README.md  cmdline-life.c  cmdline-life.h  config.h  config.status  configure  configure.ac  life  life.6
life/.deps/: life-cmdline-life.Po  life-life.Po
life/autom4te.cache/: output.0  requests  traces.0  traces.1
maze/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  main.c  put.c
src/: CMakeLists.txt  Makefile.am  app.cc  app.h  battle.cc  board.h  correct_curses.h  game_map.h  health_bar.cc  health_bar.h  item.h  main.c  main.cc  main.h  monster.h  player.h  stats.h  test_app.cc  test_board.cc
src/data/: itemlist.h  items.jq  items.json  items.py  items.sh
test/: CMakeLists.txt  Makefile.am  app.sh  board.cc  board.sh  game.sh
